# amd_perf

./: .gitignore  .gitmodules  Makefile  README.md
docs/: cpu-info.md  test-plan.md
gbench-test/: CMakeLists.txt  Makefile  README.md
gbench-test/benchmarks/: fma_bench.cpp  fma_bf16.cpp  fma_bf16_bench.cpp  fma_bf16_correctness.cpp  fma_register_peak_bench.cpp  fp32_fma_length_sweep_bench.cpp  gather_bench.cpp  ops_common.cpp  ops_correctness.cpp  reduce_bench.cpp  scatter_bench.cpp  smoke_bench.cpp  softmax_bench.cpp
gbench-test/include/: fma_bf16.h  ops_common.h  perf_counter.h
gbench-test/scripts/: check_fma_bf16_disassembly.py  check_ops_disassembly.py  collect_ops_environment.sh  dense_summary.py  exploratory_summary.py  gbench_json_to_md.py  ops_report.py  plot_fma_length_sweep.py  run_dense_op.py  run_dense_suite.py  runtime_gate.py  test_ops_report.py  validate_dense_benchmark_list.py  validate_fma_bf16_benchmark_list.py
